network/policies/allow-traffic-to-cloud-metadata-service/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-to-cloud-metadata-service
  annotations:
    cenroq.io/displayName: "Allow Egress to Cloud Metadata Service"
    cenroq.io/description: "Allow egress traffic to the cloud metadata service at 169.254.169.254 on ports 80 and 443."
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 169.254.169.254/32
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
